--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: white;
+  background-color: rgb(6, 0, 32);
+}
+
+.header {
+  border-bottom: 1px solid orangered;
 }
 
 
