--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   color: white;
   background-color: rgb(6, 0, 32);
 }
 
 .header {
-  border-bottom: 1px solid orangered;
+  border-bottom: 2px solid orangered;
+  width: 100%;
+  height: auto;
+}
+
+.body {
+  height: 80vh;
+  width: 90vw;
+  border: 1px solid orangered;
 }
 
 
